# elf_info

./: .gitignore  CMakeLists.txt  main.cpp
include/elf_info/: elf.hh  elf_print.hh  elf_structs.hh  elf_types.hh  elf_utils.hh  integral_types.hh
src/: elf_utils.cpp  main.cpp
